Bug 38951 - RTL numbering with wrong direction in Textbox
Summary: RTL numbering with wrong direction in Textbox
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Ahmad Harthi
URL:
Whiteboard: target:4.1.0 target:4.0.3
Keywords:
: 37692 (view as bug list)
Depends on:
Blocks: RTL 37692
  Show dependency treegraph
 
Reported: 2011-07-04 06:56 UTC by Nawfel
Modified: 2024-08-03 09:15 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample with screenshots (90.04 KB, application/vnd.oasis.opendocument.graphics)
2011-07-04 09:30 UTC, Rainer Bielefeld Retired
Details
... (27.28 KB, application/vnd.oasis.opendocument.presentation)
2011-07-23 04:19 UTC, Nawfel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nawfel 2011-07-04 06:56:29 UTC
I am using ubuntu 11.04 ... LibreOffice 3.3.2
LibreOffice language=French
My document is in ODP format
My language is Arabic

the screenshot of the problem :

https://docs.google.com/uc?id=0B2nciG4JCjulZWQyNGM5ZTgtNmQ1MC00ZmM1LTgyNWQtNWFkNDU4ZTI4MzYz&export=download&hl=en_US


it does not happen when the text is selected 
here is a screenshot
https://docs.google.com/uc?id=0B2nciG4JCjulYmVlNzhlYWQtYzI4NC00MzhiLWFlODAtMTRkZTI4ODFmMjk0&export=download&hl=en_US

the problem does not happen in Writer 

what I am trying to say is that when the text is written right to left : the ")" should be a "("

http://nabble.documentfoundation.org/problem-in-impress-td3137230.html
Comment 1 Rainer Bielefeld Retired 2011-07-04 07:13:57 UTC
@Nawfel:
Please attach a sample document (Presentation) demonstrating the problem here in the bug!
Comment 2 Regina Henschel 2011-07-04 08:16:37 UTC
I can confirm the bug with LibO3.4.1 RC2 on WinXP. To reproduce the problem you have to enable CTL-support so that you get the left-to-right icon in the formatting toolbar.
Comment 3 Rainer Bielefeld Retired 2011-07-04 09:12:51 UTC
I know, I only was too lazy to create a sample document.
Problem is [Reproducible] with "LibreOffice 3.4.1RC1 - WIN7  Home Premium (64bit) German UI [OOO340m1 (Build:103)]". General DRAW textbox problem with Right To Left orientation, pls. see attachment!

@Sophie, @Regina:
Any idea to whom such one can be assigned?
Comment 4 Rainer Bielefeld Retired 2011-07-04 09:30:03 UTC
Created attachment 48744 [details]
Sample with screenshots
Comment 6 Nawfel 2011-07-05 02:00:18 UTC Comment hidden (obsolete)
Comment 7 Nawfel 2011-07-23 04:19:54 UTC
Created attachment 49444 [details]
...

...
Comment 8 Lior Kaplan 2011-12-16 16:10:33 UTC
#37692 is a similar report for Impress.
Comment 9 Ahmad Harthi 2013-01-05 09:16:53 UTC
editeng/outliner/outliner.cxx line#: 2099

I'm playing with code here, there seem to be an issue calculating "is RTL".

You can make "return (1 == !(mnBiDiLevel%2));" at line 2129 and RTL will work while LTR will break.

It's clear for me that the use of ubidi_setPara() and ubidi_getLogicalRun() is not done preperly, any ideas.. thoughts??
Comment 10 Lior Kaplan 2013-01-22 20:25:40 UTC
@Ahmad - you should probably ask this on the developers list.
Comment 11 Not Assigned 2013-02-25 10:57:16 UTC
navin committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2738fa9fdc3aec9a64f2eab1d9d48942218c199e

fix fdo#38951, use paragraphâs writing direction.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Ahmad Harthi 2013-02-25 10:59:49 UTC
Thanks Navin :)

There is a small issue with Latin numbering not compatible with RTL, I'll file a new bug about it.
Comment 13 Lior Kaplan 2013-03-07 14:34:08 UTC
*** Bug 37692 has been marked as a duplicate of this bug. ***
Comment 14 Lior Kaplan 2013-03-07 14:35:44 UTC
Verified fix on master build with the two examples in the bug report.
Comment 15 Commit Notification 2013-03-14 13:25:27 UTC
navin committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c1ab08f2559d3996ba595cfbdad287e5a7038f81&h=libreoffice-4-0

fix fdo#38951, use paragraphâs writing direction.


It will be available in LibreOffice 4.0.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.