fix fdo#38951, use paragraph’s writing direction.

In case of RTL, we want bullet text e.g. “1. ,1)” to be reversed
e.g. “.1,(1”, so we need to check only paragraph’s writing direction
and pass that direction to DrawingText().
and fix drawing position calculation logic.

Change-Id: I303dc1b04ae5e66b1b5d25a40794be308f36668b
Reviewed-on: https://gerrit.libreoffice.org/2348
Reviewed-by: Ahmad Harthi <aalharthi@kacst.edu.sa>
Tested-by: Ahmad Harthi <aalharthi@kacst.edu.sa>